Selection Map/Mode System + Temporal Walls
1. I added the "Temporal Wall" appearance/disappearance system
2. I added the commands /wall set - get - remove - build for the "Temporary Wall"
3. I added the message detection system in the chat to limit messages in game to the TEAM
4. Added the UI for map and mode selection
5. Added map and loading system in UI
6. Added mode loading system in UI